packages/specification/testing/fixtures/invalid/ambiguous-import/app.prd
module billing {
  import invoice from accounting
  import invoice from archive
}
